feat: finish testing report service